re PR c/27721 (ICE using += with a function)

PR c/27721
	* c-typeck.c (build_modify_expr): Test earlier for non-lvalues.

	* gcc.dg/lvalue-4.c: New test.

From-SVN: r115955